WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
195893
Missing a ThrowScope release in JSObject::toString().
https://bugs.webkit.org/show_bug.cgi?id=195893
Summary
Missing a ThrowScope release in JSObject::toString().
Mark Lam
Reported
2019-03-18 09:42:49 PDT
<
rdar://problem/48970986
>
Attachments
proposed patch.
(2.32 KB, patch)
2019-03-18 09:47 PDT
,
Mark Lam
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Lam
Comment 1
2019-03-18 09:47:33 PDT
Created
attachment 365022
[details]
proposed patch.
Robin Morisset
Comment 2
2019-03-18 10:08:36 PDT
Comment on
attachment 365022
[details]
proposed patch. LGTM
Michael Saboff
Comment 3
2019-03-18 10:09:38 PDT
Comment on
attachment 365022
[details]
proposed patch. r=me
Mark Lam
Comment 4
2019-03-18 10:10:22 PDT
Comment on
attachment 365022
[details]
proposed patch. Thanks for the review. Landing now.
WebKit Commit Bot
Comment 5
2019-03-18 10:36:54 PDT
Comment on
attachment 365022
[details]
proposed patch. Clearing flags on attachment: 365022 Committed
r243079
: <
https://trac.webkit.org/changeset/243079
>
WebKit Commit Bot
Comment 6
2019-03-18 10:36:56 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug