Missing a ThrowScope release in JSObject::toString(). https://bugs.webkit.org/show_bug.cgi?id=195893 <rdar://problem/48970986>

Reviewed by Michael Saboff.

JSTests:

* stress/to-string-exception-check-release.js: Added.

Source/JavaScriptCore:

Placate the validator with a RELEASE_AND_RETURN().

* runtime/JSObject.cpp:
(JSC::JSObject::toString const):


Canonical link: https://commits.webkit.org/210156@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@243079 268f45cc-cd09-0410-ab3c-d52691b4dbfc