JSTests/stress/to-string-exception-check-release.js
@@ -1,0 +1,5 @@
+// This test should not fail exception check validation.
+
+let s = new String();
+s.toString = ()=>{}
+JSON.stringify(s);
